--- a/docs/todo.mdx
+++ b/docs/todo.mdx
@@ -17,3 +17,5 @@ name: TODO
 * Obfuscate cursor in pagination
 * Simplify the config so that some parts (ModelPackageShort) can be automatically calculated when not provided
 * Consider a migration tool like goose, sql-migrate, mattes/migrate
+* Automatic generate docs for auto gen code
+* Provide hydrate function with db connection and return error
