Replaced deprecated function call and updated docs

--- a/docs/authentication.mdx
+++ b/docs/authentication.mdx
@@ -2,6 +2,10 @@
 name: Authentication
 ---
 
+Todo:
+
+* Update example to have the auth user in a models/AuthenticateUser instead of package main user.  This way it can be loaded from other packages, and we can create a function to grab it from the context.
+
 # Authentiction
 
 This project provides one way of handling user authentication and sessions, but it is optional.  If you wish to use it, here is an example of how to set up a project using the authentication provided.  This example assumes you're working from a project based on the quickstart, or a reasonably fresh project.
