TODO item added

--- a/docs/todo.mdx
+++ b/docs/todo.mdx
@@ -4,6 +4,7 @@ name: TODO
 
 #  TODO
 
+* Implement field level permission checks for create actions
 * Change string field names to a new type so we can explicitly require them
 * Eliminate the two-step paginated query steps
 * Remove files in cmd/static/gnorm if not used.  db.go is not, I think
